# sundials_eigen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindSUNDIALS.cmake
spack-env/: spack.yaml
src/: cvode_wrapper.hh  main.cc  stepper_base.hh  types.hh
src/error/: error_test.hh
